# smart-home-hub

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp  setup.sh  test_curl  test_curl.cpp
config/: authorized_users_example.json  devices.json  roborock_config.example.json  settings.json  tadiran_config.example.json  test_devices.json
docker/: compose.yml
include/common/: command_validation.hpp  device_result.hpp  message.hpp
include/device_management/factory/: device_factory.hpp
include/device_management/registry/: device_registry.hpp
include/devices/: dummy_device.hpp  idevice.hpp  roborock.hpp  tadiran.hpp
include/listener/: feedback_listener.hpp  listener.hpp
include/message_handling/encoders/: iencoder.hpp  llama_encoder.hpp  simple_encoder.hpp  smart_encoder.hpp
include/message_handling/parser/: parser.hpp
include/message_handling/voice_msg_manager/: voice_msg_manager.hpp
include/queues/: message_queue.hpp
include/server/: server.hpp
scripts/: hailo_speech_to_text.py  tadiran_bridge.py
src/common/: command_validation.cpp
src/device_management/factory/: device_factory.cpp
src/device_management/registry/: device_registry.cpp
src/devices/: dummy_device.cpp  idevice.cpp  roborock.cpp  tadiran.cpp
src/listener/: feedback_listener.cpp  listener.cpp
src/message_handling/encoders/: llama_encoder.cpp  simple_encoder.cpp  smart_encoder.cpp
src/message_handling/parser/: parser.cpp
src/message_handling/voice_msg_manager/: voice_msg_manager.cpp
src/server/: server.cpp
tests/: main_test.cpp  test_device_factory.cpp  test_device_factory.hpp  test_device_registry.cpp  test_device_registry.hpp  test_dummy_device.cpp  test_dummy_device.hpp  test_feedback_listener.cpp  test_feedback_listener.hpp  test_listener.cpp  test_listener.hpp  test_message.cpp  test_message.hpp  test_parser.cpp  test_parser.hpp  test_queue.cpp  test_queue.hpp  test_runner.hpp  test_server.cpp  test_server.hpp  test_simple_encoder.cpp  test_simple_encoder.hpp
